[project]
name = "pinelab-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Pranjal",email = "pranjal@Pranjals-MacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.84.0,<2.0.0)",
    "slack (>=0.0.2,<0.0.3)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
